deploy eks cluster for java app

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -26,7 +26,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: dinagamal/java-app:latest
+          tags: ghassan8080/java-app:latest
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
